# GemPyTF

./: .requirements.txt.swp  GemPyTF_demo.ipynb  MANIFEST.in  README.md  env.yml  env_nogpu.yml  optional-requirements.txt  requirements.txt  setup.cfg
.github/workflows/: ci-test.yml
Examples/: model1-Horizontalstratigraphic.py  model2-Anticline.py  model3-Recumbent Fold.py  model4-Pinchout.py  model5-Faults.py  model6-Unconformity.py  model7-combination.py
Examples/Gravity/: Greenstone_gravity.py
RealcaseModels/: Greenstone.py  Moureze.py
docs/source/: conf.py
notebooks/Mytest/: Tensorflow_interpolator-test.ipynb  Tensorflow_interpolator.ipynb  timeGPUtest.py
notebooks/examples/: Alesmodel - Plotting sections and maps.ipynb  Greenstone.ipynb  Model 1 - Horizontal stratigraphic.ipynb  Model 2 - Fold-Copy1.ipynb  Model 2 - Fold.ipynb  Model 3 - Recumbent Fold.ipynb  Model 4 - Pinchout.ipynb  Model 5 - Fault.ipynb  Model 6 - Unconformity.ipynb  STC-Course.ipynb  perth_basin.ipynb
notebooks/experimental/: GemFe.ipynb  GemPy Features Presentation.ipynb  Loss Function.ipynb  Topography - Dealing with raster formats.ipynb  ch1-a-Modify Kriging parameters.ipynb  pyivsta_dev_alex.ipynb  pyvista_gempy-dev2.ipynb  pyvista_gempy-dev3-Topography.ipynb
notebooks/integrations/: GemPy-Striplog.ipynb  GemPy-discretize-emg3d.ipynb  GemPy-export-MOOSE.ipynb
src/gempytf/: __init__.py
test/: conftest.py
test/test_addons/: test_gempy_to_rexfile.py
test/test_assets/: TOUPDATE_spill.py  test_gravity.py  test_grid_tz.py  test_magnetics.py  test_topology_np.py  test_vista.py
test/test_core/: UPDATE_data.py  (+8 more)
(+105 files in other folders)
