[metadata]
url = https://github.com/???/gempytf
name = gempytf
author = 'Miguel de la Varga, Elisa Heim, Alexander Schaaf, Fabian Stamm, Florian Wellmann, George Liang, Andrew Annex',
description-file = README.md
description = An Open-source, Python-based 3-D structural geological modeling software.
keywords = geology, 3-D modeling, structural geology, uncertainty
version = 0.1.0
license = LGPL v3
license_file = LICENSE
readme = README.md

[options]
package_dir=
    =src
packages=find:
python_requires =  >=3.6, <4    
install_requires =
    numpy
    tensorflow
    pandas
    matplotlib
    pytest
    nbsphinx
    seaborn
    networkx
    ipywidgets
    scikit-image
    nptyping==1.0.1
    pyvista

[options.packages.find]
where = src
